--- a/02-Challenge/Develop/assets/css/style.css
+++ b/02-Challenge/Develop/assets/css/style.css
@@ -10,16 +10,6 @@ body {
     "Lucida Sans", Arial, sans-serif;
 }
 
-header,
-nav,
-main,
-aside,
-footer {
-  padding: 20px;
-  background-color: #2a607c;
-  color: #ffffff;
-}
-
 header h1 {
   display: inline-block;
   font-size: 48px;
@@ -33,7 +23,6 @@ nav {
   padding-top: 15px;
   margin-right: 20px;
   float: right;
-  font-size: 20px;
 }
 
 nav ul {
@@ -58,9 +47,7 @@ h3 {
 
 .hero {
   height: 800px;
-  width: 100%;
-  margin-bottom: 25px;
-  background-image: url("../images/digital-marketing-meeting.jpg");
+  background-image: url("assets/images/digital-marketing-meeting.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -68,107 +55,60 @@ h3 {
 .float-left,
 .float-right {
   float: left;
-  margin-right: 25px;
 }
 
-.content {
-  width: 75%;
-  display: inline-block;
-  margin-left: 20px;
-}
-
-.benefits {
-  margin-right: 20px;
-  padding: 20px;
-  clear: both;
-  float: right;
-  width: 20%;
-  height: 100%;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #2589bd;
-}
-
-.benefit-lead,
-.benefit-brand,
-.benefit-cost {
-  margin-bottom: 32px;
+main {
+  background-color: #0072bb;
   color: #ffffff;
 }
 
-.benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3 {
+main > section {
+  margin-bottom: 20px;
+  padding: 50px;
+  font-size: 16px;
+}
+
+aside {
+  margin-right: 20px;
+  float: right;
+  width: 20%;
+  background-color: #2589bd;
+}
+
+aside article {
+  margin-bottom: 32px;
+}
+
+aside h3 {
   margin-bottom: 10px;
   text-align: center;
 }
-
-.benefit-lead img,
-.benefit-brand img,
-.benefit-cost img {
+aside img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.social-media-marketing {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  background-color: #0072bb;
-  color: #ffffff;
-}
-
-.search-engine-optimization img {
-  max-height: 200px;
-}
-
-.online-reputation-management img {
-  max-height: 200px;
-}
-
-.social-media-marketing img {
-  max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.social-media-marketing h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
-
-.footer {
-  padding: 30px;
+footer {
   clear: both;
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
   text-align: center;
+  background-color: #2a607c;
 }
 
-.footer h2 {
+footer h2 {
   font-size: 20px;
+}
+
+article img,
+section img {
+  max-height: 200px;
+}
+
+.search-engine-optimization h2,
+.online-reputation-management h2,
+.social-media-marketing h2,
+.benefit-lead h3,
+.benefit-brand h3,
+.benefit-cost h3 {
+  font-size: 36px;
 }
